k8s/ai-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ai-deployment
  labels:
    name:  ai-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  ai
  template:
    metadata:
      labels:
        app:  ai
    spec:
      containers:
      - image:  ai-service-image:v2
        imagePullPolicy: IfNotPresent
        name:  ai-service-container
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /_status/healthz
            port: 3001
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /_status/healthz
            port: 3001
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort:  3001
          name:  ai-service-port
