k8s/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  auth-deployment
  labels:
    name: auth-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app:  auth
  template:
    metadata:
      labels:
        app:  auth
    spec:
      containers:
      - image:  525390917683.dkr.ecr.ap-south-1.amazonaws.com/auth-service
        name:  auth-main
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "120m"
            memory: "120M"
          limits:
            cpu: "250m"
            memory: "250M"
        livenessProbe:
          httpGet:
            path: /_status/healthz
            port: 4000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /_status/healthz
            port: 4000
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort:  4000
          name:  http
